src/components/PropositionCard/PropositionCard.scss
@import '../../styles/mixins';
@import '../../styles/breakpoints';

.proposition-card {
    align-items: center;
    display: flex;
    flex-flow: column;
    height: 80vh;
    margin: 0 auto;
    max-width: 72rem;

    &__top,
    &__bottom {
        display: flex;
        flex-flow: column;
        justify-content: space-evenly;
        width: 100%;
    }

    &__top {
        flex: 0.6;
        margin-top: 4rem;
    }

    &__bottom {
        flex: 0.4;

        @media screen and (min-width: $breakpoint-lg) {
            margin-top: 4rem;
        }
    }

    @media screen and (max-width: $breakpoint-sm) {
        padding-left: 1rem;
        padding-right: 1rem;
    }

    @media screen and (max-width: $breakpoint-lg) {
        &__top {
            height: 30rem;
            margin-top: 0;
        }

        header {
            flex: 0;
        }

        &__card {
            background-color: #4c739b;
            flex: 0.5;
        }
    }

    header {
        align-items: center;
        display: flex;
        flex-flow: row;
        font-size: 3.5rem;
        font-weight: 700;
        height: 16rem;
        justify-content: center;
        padding: 0 3.2rem;
        text-align: center;
        transition: font-size, padding, 0.3s ease-out;

        @media screen and (max-width: $breakpoint-lg) {
            font-size: 2.6rem;
            padding: 0;
        }

        @media screen and (max-width: $breakpoint-sm) {
            font-size: 2.1rem;
            padding: 0;
        }

        @media screen and (min-width: $breakpoint-lg) {
            display: block;
        }

        @media screen and (min-width: $breakpoint-lg) {
            align-items: center;
            display: flex;
            height: 20rem;
            justify-content: center;
        }
    }

    &__card {
        @include card();

        max-height: 8rem;
        overflow: scroll;

        &-title {
            color: $secondary-muted;
            font-size: 1.3rem;
            margin-top: 0;
            text-transform: uppercase;
        }

        @media screen and (min-width: $breakpoint-lg) {
            max-height: 12rem;
        }
    }

    &__buttons {
        align-items: start;
        column-gap: 3.2rem;
        display: flex;
        flex-flow: row;
        justify-content: center;

        @media screen and (max-width: $breakpoint-md) {
            column-gap: 2rem;
        }

        @media screen and (max-width: $breakpoint-sm) {
            display: grid;
            grid-template-columns: repeat(4, 1fr);

            .proposition-button {
                margin: 0 auto;
                width: 7rem;

                &__name {
                    margin-left: 0;
                    width: auto;
                }
            }
        }
    }

    &__neutral {
        display: flex;
        flex-flow: row;
        justify-content: center;
        margin: 1.5rem 0;

        @media screen and (min-width: $breakpoint-lg) {
            margin: 3rem 0;
        }
    }

    &__actions {
        align-items: center;
        display: flex;
        flex-flow: row;
        flex-wrap: wrap;
        justify-content: center;
        margin: 0 auto;
        max-width: 52rem;
    }
}

